[metadata]
name = jax-wavelets
version = 0.0.1
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/jax-wavelets
description = The 2D discrete wavelet transform for JAX
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    einops
    jax
    pywavelets
